# magnetite

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src-py/magnetite/: foo.py
tests/: test_foo.py
