[project]
name = "magnetite"
version = "0.1.0"
description = "Open-source framework for mission-critical modeling and simulation (work in progress)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/astra-laboratories/magnetite/"
Repository = "https://github.com/astra-laboratories/magnetite/"
Readme = "https://github.com/astra-laboratories/magnetite/blob/main/README.md"
Documentation = "https://github.com/astra-laboratories/magnetite/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src-py/magnetite"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
